--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,33 @@
-/*.d
-*.qcow2
-debug.sh
+*.py[co]
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+var
+sdist
+develop-eggs
+.installed.cfg
+pip-log.txt
+.coverage
+.tox
+*.mo
+.mr.developer.cfg
+.DS_Store
+Thumbs.db
+.venv
 .idea
+out
+target
+*.iml
+*.ipr
+*.iws
+*.db
+.coverage
+ChangeLog
+AUTHORS
+*.qcow2
+diskimage-create.*
+debug.sh
+/*.d
