Add buildimage tox env

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,9 @@ commands =
 [testenv:venv]
 commands = {posargs}
 
+[testenv:buildimage]
+commands = manila-image-create
+
 [flake8]
 show-source = true
 builtins = _
