Add tox job for building LXD image
Add additional tox job 'buildimage-lxd' which produces
lxd metadata package and rootfs with installs
nfs-ganesha, unfs3 and cifs.

Co-Authored-By: Alexey Ovchinnikov <aovchinnikov@mirantis.com>

Change-Id: Ia5a4701a828aeef93840f9c0a0e1d0bc0f4a5a2e

--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,9 @@ commands = manila-image-create
 deps =
     -r{toxinidir}/requirements.txt
 
+[testenv:buildimage-lxd]
+commands = manila-image-create lxd
+
 [flake8]
 show-source = true
 builtins = _
