Fix buildimage job
Job named "buildimage" fails with following error:

E: Package 'kpartx' has no installation candidate

So, execute "apt-get update" before required dependencies installation.
Also, do not install dependencies specified in 'test-requirements.txt'
as redundant.

Change-Id: Ic4beaa6be81eb50bafa1dd029722ec84288e6f20
Closes-Bug: #1537011

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,8 @@ commands = {posargs}
 
 [testenv:buildimage]
 commands = manila-image-create
+deps =
+    -r{toxinidir}/requirements.txt
 
 [flake8]
 show-source = true
