Add more files to .gitignore
Add following elements to .gitignore:
- root dir called 'build' that is used by 'docs' tox job.
- vim temporary files
- pydev/eclipse project files
- log files with suffix '*.log'

Change-Id: I99f6206d80fa360c113c889e4c535541d2d4978a
Closes-Bug: #1538663

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ pip-log.txt
 .coverage
 .tox
 *.mo
+*.swp
+*~
 .mr.developer.cfg
 .DS_Store
 Thumbs.db
@@ -24,9 +26,18 @@ target
 *.ipr
 *.iws
 *.db
+*.log
 ChangeLog
 AUTHORS
 *.qcow2
 diskimage-create.*
 debug.sh
 /*.d
+
+# Files created by Sphinx build
+build
+doc/build
+
+# Development environment files
+.project
+.pydevproject
