Add tox job for building Docker image
Add new job 'buildimage-docker' which produces a compressed
image from which a Docker container can be started. This
container is designed to run Samba.

Change-Id: I499fa1850d3ad197cab5f742bfca1a9f074e9a8b

--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,9 @@ commands = manila-image-create
 deps =
     -r{toxinidir}/requirements.txt
 
+[testenv:buildimage-docker]
+commands = {toxinidir}/tools/docker_builder.sh
+
 [testenv:buildimage-lxd]
 commands = manila-image-create lxd
 
