Enables end user to pick share protocol
This patch set refactors manila-image-create script to allow
end users to pick which share protocol install on their images.
This change slightly affects the current behavior of the script.

If an image is created using tox -e buildimage (as stated by current
docs) an Ubuntu Trusty Minimal image with NFS will be created.

Now, calling manila-image-create with params, will generate an image with
the filesystem protocol desired.

Change-Id: I0419cbf9a39290d32409f7a5ab9dfaf5ca636bb7
Closes-Bug: #1643034

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands =
 commands = {posargs}
 
 [testenv:buildimage]
-commands = manila-image-create
+commands = manila-image-create {posargs}
 deps =
     -r{toxinidir}/requirements.txt
 
