Fix doc building
Add the usual sphinx configuration for setup.cfg so that docs are built
at the usual place required for OpenStack CI.

Change-Id: I3d510f09a5e4d5945c62e2e75c90e8a0ea88fa0c

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,5 +19,10 @@ scripts =
 data_files =
     share/manila-elements/elements = elements/*
 
+[build_sphinx]
+all_files = 1
+build-dir = doc/build
+source-dir = doc/source
+
 [wheel]
 universal = 1
