import zuul job settings from project-config
This is a mechanically generated patch to complete step 1 of moving
the zuul job settings out of project-config and into each project
repository.

Because there will be a separate patch on each branch, the branch
specifiers for branch-specific jobs have been removed.

Because this patch is generated by a script, there may be some
cosmetic changes to the layout of the YAML file(s) as the contents are
normalized.

See the python3-first goal document for details:
https://governance.openstack.org/tc/goals/stein/python3-first.html

Change-Id: Ib7faf0e670038308caee6629f52f83f53933c175
Story: #2002586
Task: #24309

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,7 +1,29 @@
 - project:
+    templates:
+      - check-requirements
+      - build-openstack-sphinx-docs
     check:
       jobs:
         - openstack-tox-lower-constraints
+        - openstack-tox-pep8
+        - legacy-manila-buildimage-generic
+        - legacy-manila-buildimage-docker:
+            voting: false
+        - manila-tempest-dsvm-container-scenario-custom-image:
+            voting: false
+            irrelevant-files:
+              - ^(test-|)requirements.txt$
+              - ^setup.cfg$
+        - manila-tempest-dsvm-generic-scenario-custom-image:
+            voting: false
+            irrelevant-files:
+              - ^(test-|)requirements.txt$
+              - ^setup.cfg$
     gate:
       jobs:
         - openstack-tox-lower-constraints
+        - openstack-tox-pep8
+        - legacy-manila-buildimage-generic
+    post:
+      jobs:
+        - legacy-manila-publishimage-generic
