Import legacy buildimage jobs
Import jobs from openstack-zuul-jobs repo, the manila team can maintain
these themselves now. Rename jobs following Zuul v3 naming conventions.

Use openstack-lower-constraints-jobs template and remove jobs that are
part of template.

Change-Id: I1926a5978b310096cd12cdd85becd491ddbe8b88

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,13 +1,25 @@
+- job:
+    name: manila-image-elements-buildimage-docker
+    parent: legacy-base
+    run: playbooks/manila-buildimage-docker/run.yaml
+    timeout: 1800
+
+- job:
+    name: manila-image-elements-buildimage-generic
+    parent: legacy-base
+    run: playbooks/manila-buildimage-generic/run.yaml
+    timeout: 1800
+
 - project:
     templates:
       - check-requirements
       - build-openstack-sphinx-docs
+      - openstack-lower-constraints-jobs
     check:
       jobs:
-        - openstack-tox-lower-constraints
         - openstack-tox-pep8
-        - legacy-manila-buildimage-generic
-        - legacy-manila-buildimage-docker:
+        - manila-image-elements-buildimage-generic
+        - manila-image-elements-buildimage-docker:
             voting: false
         - manila-tempest-dsvm-container-scenario-custom-image:
             voting: false
@@ -21,9 +33,8 @@
               - ^setup.cfg$
     gate:
       jobs:
-        - openstack-tox-lower-constraints
         - openstack-tox-pep8
-        - legacy-manila-buildimage-generic
+        - manila-image-elements-buildimage-generic
     post:
       jobs:
         - legacy-manila-publishimage-generic
