fix tox python3 overrides
We want to default to running all tox environments under python 3, so
set the basepython value in each environment.

We do not want to specify a minor version number, because we do not
want to have to update the file every time we upgrade python.

We do not want to set the override once in testenv, because that
breaks the more specific versions used in default environments like
py35 and py36.

Change-Id: I3a20dc68bf1d4051724d148b0fa808ea3d0a1673
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/tox.ini
+++ b/tox.ini
@@ -17,14 +17,17 @@ whitelist_externals = bash
 commands = {toxinidir}/tools/run_bashate.sh
 
 [testenv:docs]
+basepython = python3
 commands = python setup.py build_sphinx
 
 [testenv:pep8]
+basepython = python3
 commands =
     flake8 {posargs}
     {toxinidir}/tools/run_bashate.sh
 
 [testenv:venv]
+basepython = python3
 commands = {posargs}
 
 [testenv:buildimage]
