Add native Zuul v3 manila image elements jobs
Replace the auto-converted legacy jobs with native jobs
and define all the jobs in-tree.  After we merge this we
can remove the legacy-manila-publish-generic job from the
openstack-zuul-jobs repository.

Note that the old job apparently relied on some JJB magic
to construct tagged-image names.  This no longer works so
instead we use 'git describe --tags' to obtain a current
tag, publish the image with its tagged name, and symlink
manila-service-image-master.qcow2 -- which is the expected
image-name for our CI jobs -- to it.

Unfortunately the new publish job can't be tested
beforehand so we may have to follow this with another
patch if there are issues.

Closes-Bug: #1812478
Change-Id: Ie0c367591c0e1ae4fefb62688ecd76aff5b94464

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,15 +1,3 @@
-- job:
-    name: manila-image-elements-buildimage-docker
-    parent: legacy-base
-    run: playbooks/manila-buildimage-docker/run.yaml
-    timeout: 1800
-
-- job:
-    name: manila-image-elements-buildimage-generic
-    parent: legacy-base
-    run: playbooks/manila-buildimage-generic/run.yaml
-    timeout: 1800
-
 - project:
     templates:
       - check-requirements
@@ -37,4 +25,38 @@
         - manila-image-elements-buildimage-generic
     post:
       jobs:
-        - legacy-manila-publishimage-generic
+        - manila-image-elements-publish-artifacts
+
+- job:
+    name: manila-image-elements-buildimage-docker
+    description: |
+      Build docker image for the "container" manila back end.
+    parent: unittests
+    timeout: 1800
+    required-projects:
+      - openstack/manila-image-elements
+    run: playbooks/manila-buildimage-docker/run.yaml
+
+- job:
+    name: manila-image-elements-buildimage-generic
+    description: |
+      Build service image for the "generic" manila back end.
+    parent: unittests
+    timeout: 1800
+    required-projects:
+      - openstack/manila-image-elements
+    run: playbooks/manila-buildimage-generic/run.yaml
+
+- job:
+    name: manila-image-elements-publish-artifacts
+    description: |
+      Build image artifacts and publish to tarballs.openstack.org
+    parent: publish-openstack-artifacts
+    timeout: 3600
+    final: true
+    required-projects:
+      - openstack/manila-image-elements
+    run: playbooks/manila-buildimage-generic/run.yaml
+    post-run: playbooks/manila-publish-artifacts/post.yaml
+
+
