Ensure artifacts directory exists
When we merged https://review.openstack.org/#/c/631846/ the
new image failed to upload to tarballs.openstack.org and the
error message in the post job indicated that the artifacts
directory was missing.

Change-Id: If1068b410e646f780635d733b52172d93da78db5

--- a/playbooks/manila-publish-artifacts/post.yaml
+++ b/playbooks/manila-publish-artifacts/post.yaml
@@ -1,7 +1,13 @@
 - hosts: all
   name: Copy artifacts
   tasks:
-    - synchronize:
+    - name: Ensure artifacts directory exists
+      file:
+        path: "{{ zuul.executor.work_root }}/artifacts"
+        state: directory
+      delegate_to: localhost
+    - name: Collect artifacts
+      synchronize:
         dest: "{{ zuul.executor.work_root }}/artifacts/images/"
         mode: pull
         src: "{{ zuul.project.src_dir }}/images/"
