Replace git.openstack.org URLs with opendev.org URLs
Change-Id: I38a97dabafd78c48da3668d4b92cb817e1fd3ed9

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ classifiers =
     Operating System :: POSIX :: Linux
 author = OpenStack
 author-email = openstack-discuss@lists.openstack.org
-home-page = https://docs.openstack.org/developer/manila
+home-page = https://docs.openstack.org/manila/latest/
 
 [files]
 scripts =
