Update docs job
build-openstack-sphinx-docs jobs are obsolete since some time,
use the newer build-openstack-docs-pti jobs instead.

Update tox.ini to use sphinx-build directly as recommended by PTI.

Change-Id: Ib1bb988889db8f6c0a0ee4d4fbf8921725c9790f

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands = {toxinidir}/tools/run_bashate.sh
 
 [testenv:docs]
 basepython = python3
-commands = python setup.py build_sphinx
+commands = sphinx-build -W -d doc/build/doctrees -b html doc/source/ doc/build/html
 
 [testenv:pep8]
 basepython = python3
