Cleanup py27 support
This repo is now testing only with Python 3, so let's make
a few cleanups:
- Remove python 2.7 stanza from setup.py
- Remove obsolete sections from setup.cfg
- Update requirements, no need for python_version anymore
- Cleanup doc/source/conf.py to remove now obsolete content.
- Use newer openstackdocstheme version
- Remove install_command from tox.ini, the default is fine;
  move contraints into deps
- Move python3 into base tox environment.

Change-Id: Ibd243ce5be8415147c24f596b4059ec3fb68a89c

--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,12 @@ minversion = 1.6
 skipsdist = True
 
 [testenv]
+basepython = python3
 usedevelop = True
-install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master} {opts} {packages}
 setenv =
     VIRTUAL_ENV={envdir}
 deps =
+    -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/test-requirements.txt
 
@@ -17,22 +18,20 @@ whitelist_externals = bash
 commands = {toxinidir}/tools/run_bashate.sh
 
 [testenv:docs]
-basepython = python3
 commands = sphinx-build -W -d doc/build/doctrees -b html doc/source/ doc/build/html
 
 [testenv:pep8]
-basepython = python3
 commands =
     flake8 {posargs}
     {toxinidir}/tools/run_bashate.sh
 
 [testenv:venv]
-basepython = python3
 commands = {posargs}
 
 [testenv:buildimage]
 commands = manila-image-create {posargs}
 deps =
+    -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
     -r{toxinidir}/requirements.txt
 
 [testenv:buildimage-docker]
@@ -44,7 +43,6 @@ builtins = _
 exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,tools
 
 [testenv:lower-constraints]
-basepython = python3
 deps =
   -c{toxinidir}/lower-constraints.txt
   -r{toxinidir}/test-requirements.txt
