Pass env vars into tox buildimage sections
Change-Id: Ia447d5fef7dd09ad6a68c6516a07306f314247e1
Signed-off-by: George Melikov <mail@gmelikov.ru>

--- a/tox.ini
+++ b/tox.ini
@@ -33,9 +33,11 @@ commands = manila-image-create {posargs}
 deps =
     -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
     -r{toxinidir}/requirements.txt
+passenv = *
 
 [testenv:buildimage-docker]
 commands = {toxinidir}/tools/docker_builder.sh
+passenv = *
 
 [flake8]
 show-source = true
