Modify job to build images
We currently only build the generic driver
image with the job "manila-image-elements-buildimage-generic".
Since we'd like to use a cephfs based client image,
we can reuse the job to produce two images instead
of one. The new job "manila-image-elements-buildimages"
produces two images: "manila-service-image-cephfs-{tag}.qcow2"
and "manila-service-image-{tag}.qcow2"; where the
tag corresponds to the version of this project.

The job also creates a soft link of the tagged images
with a "-master" suffix instead of the tag - this
is useful for CI jobs that don't need to worry
about changing/using the latest tag.

Change-Id: I60c6b38b5d5de7649c0d760519a79288fafca1e3
Signed-off-by: Goutham Pacha Ravi <gouthampravi@gmail.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -6,7 +6,7 @@
     check:
       jobs:
         - openstack-tox-pep8
-        - manila-image-elements-buildimage-generic
+        - manila-image-elements-buildimages
         - manila-image-elements-buildimage-docker:
             voting: false
         - manila-tempest-dsvm-container-scenario-custom-image:
@@ -22,7 +22,7 @@
     gate:
       jobs:
         - openstack-tox-pep8
-        - manila-image-elements-buildimage-generic
+        - manila-image-elements-buildimages
     post:
       jobs:
         - manila-image-elements-publish-artifacts
@@ -38,14 +38,15 @@
     run: playbooks/manila-buildimage-docker/run.yaml
 
 - job:
-    name: manila-image-elements-buildimage-generic
+    name: manila-image-elements-buildimages
     description: |
-      Build service image for the "generic" manila back end.
+      Build service image for the "generic" manila back end, and any other
+      images specified in the role "build-mie-images"
     parent: unittests
     timeout: 1800
     required-projects:
       - openstack/manila-image-elements
-    run: playbooks/manila-buildimage-generic/run.yaml
+    run: playbooks/manila-buildimages/run.yaml
 
 - job:
     name: manila-image-elements-publish-artifacts
@@ -56,7 +57,5 @@
     final: true
     required-projects:
       - openstack/manila-image-elements
-    run: playbooks/manila-buildimage-generic/run.yaml
+    run: playbooks/manila-buildimages/run.yaml
     post-run: playbooks/manila-publish-artifacts/post.yaml
-
-
