Ensure tox in test job
We use tox to build images, and it is
no longer being included in the base
job that we depend on.

Change-Id: I608d380f2347efe8615c5ff3ae157f27bbfbf497
Signed-off-by: Goutham Pacha Ravi <gouthampravi@gmail.com>

--- a/playbooks/manila-buildimage-docker/run.yaml
+++ b/playbooks/manila-buildimage-docker/run.yaml
@@ -1,4 +1,7 @@
 - hosts: all
+  roles:
+    - role: ensure-tox
+      ensure_global_symlinks: true
   tasks:
     - name:  Run tools/gate/build-images docker
       command: bash -xe tools/gate/build-images docker
