Native Zuulv3 scenario test job
Replace the "manila-tempest-dsvm-generic-scenario-custom-image"
job with a native Zuulv3 style job that does not use
the deprecated devstack-gate project. This new test
job runs integration NFS and CIFS tests against a newly
created test image that is used as the service
instance image, as well as the client image.

Change-Id: I3d2345e80f3bc18558d4cc6cc58108ff63119460
Signed-off-by: Goutham Pacha Ravi <gouthampravi@gmail.com>

--- a/roles/build-mie-images/defaults/main.yml
+++ b/roles/build-mie-images/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+mie_project_path: "{{ zuul.projects['opendev.org/openstack/manila-image-elements'].src_dir }}"
 images_to_build:
   - cephfs
   - generic
