Native Zuulv3 container scenario test job
Replace the "manila-tempest-dsvm-container-scenario-custom-image"
job with a native Zuulv3 style job that does not use
the deprecated devstack-gate project. This new test
job runs backend tests at the moment with the container
driver. Scenario tests that include mounting shares to
tenant VMs aren't yet enabled, and doing so is a TODO
item for the future.

Change-Id: I65379ffcf06e9de111d69cd3b5bc4acc7af0547e
Signed-off-by: Goutham Pacha Ravi <gouthampravi@gmail.com>

--- a/zuul.d/manila-image-elements-jobs.yaml
+++ b/zuul.d/manila-image-elements-jobs.yaml
@@ -32,6 +32,25 @@
     post-run: playbooks/manila-publish-artifacts/post.yaml
 
 - job:
+    name: manila-image-elements-container-scenario
+    parent: manila-tempest-plugin-container
+    pre-run: playbooks/manila-buildimage-docker/run.yaml
+    required-projects:
+      - openstack/manila-image-elements
+      - openstack/manila
+      - openstack/manila-tempest-plugin
+      - openstack/python-manilaclient
+      - openstack/tempest
+    vars:
+      # NOTE(gouthamr): Not running scenario tests yet, need to test them
+      # against the container driver first
+      tempest_test_regex: '(^manila_tempest_tests.tests)(?=.*\[.*\bbackend\b.*\])'
+      devstack_localrc:
+        # "docker build" uploads the image we need to the local registry
+        # manila's devstack plugin just needs the name of the image to look up
+        MANILA_DOCKER_IMAGE_URL: "file:///home/zuul/src/opendev.org/openstack/manila-image-elements/manila-docker-container.tar.gz"
+
+- job:
     name: manila-image-elements-generic-scenario
     parent: manila-tempest-plugin-generic
     pre-run: playbooks/manila-buildimages/run-generic-scenario.yaml
