--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,8 @@ whitelist_externals = bash
 commands = {toxinidir}/tools/run_bashate.sh
 
 [testenv:docs]
+deps = -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+       -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -W -d doc/build/doctrees -b html doc/source/ doc/build/html
 
 [testenv:pep8]
