Fix setup.py and setup.cfg deprecations
This project cannot be "installed" as a python package,
so specify there are no "py_modules" to install; alongside,
hyphenated metadata headers are deprecated in setup.cfg, replace them.

Change-Id: I0713f3c871180ea235c12f888e43a7a823341f0c
Signed-off-by: Goutham Pacha Ravi <gouthampravi@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,17 @@
 [metadata]
 name = manila-image-elements
 summary = Image elements for Manila
-description-file = README.rst
+description_file = README.rst
 license = Apache Software License
+python_requires = >=3.6
 classifiers =
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
 author = OpenStack
-author-email = openstack-discuss@lists.openstack.org
-home-page = https://docs.openstack.org/manila/latest/
+author_email = openstack-discuss@lists.openstack.org
+home_page = https://docs.openstack.org/manila/latest/
 
 [files]
 scripts =
