Make tox.ini compatible with recent tox versions
Change-Id: Idd269aba375ca31a24d5012da03214dc882e4014

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = pep8
-minversion = 1.6
+minversion = 3.18.0
 skipsdist = True
 
 [testenv]
@@ -24,20 +24,26 @@ commands = sphinx-build -W -d doc/build/doctrees -b html doc/source/ doc/build/h
 commands =
     flake8 {posargs}
     {toxinidir}/tools/run_bashate.sh
+allowlist_externals =
+    {toxinidir}/tools/run_bashate.sh
 
 [testenv:venv]
 commands = {posargs}
 
 [testenv:buildimage]
-commands = manila-image-create {posargs}
+commands = {toxinidir}/bin/manila-image-create {posargs}
 deps =
     -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
     -r{toxinidir}/requirements.txt
 passenv = *
+allowlist_externals =
+    {toxinidir}/bin/manila-image-create
 
 [testenv:buildimage-docker]
 commands = {toxinidir}/tools/docker_builder.sh
 passenv = *
+allowlist_externals =
+    {toxinidir}/tools/docker_builder.sh
 
 [flake8]
 show-source = true
