Adjust qemu package name for Ubuntu Noble (24.04)
qemu package was renamed to qemu-system package in Ubuntu Noble (24.04)
so update the package name accordingly.

Also make manila-image-elements-buildimage-docker non-voting now,
because job rarely passes now due to reatelimit in docker.io .

Change-Id: I40a71159cc0385e1236151bd33070adab9693e4c

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -6,7 +6,8 @@
       jobs:
         - openstack-tox-pep8
         - manila-image-elements-buildimages
-        - manila-image-elements-buildimage-docker
+        - manila-image-elements-buildimage-docker:
+            voting: false
         - manila-image-elements-container-scenario:
             voting: false
             irrelevant-files: &irrelevant-files
